--- a/public/ststic/console/css/css.css
+++ b/public/ststic/console/css/css.css
@@ -5,3 +5,6 @@
 .border-top .border-top-right li a{ color: #fff; line-height: 50px; display: block; padding-left: 20px;  padding-right: 20px; }
 .border-top .border-top-right li a:hover{  background: black; cursor: pointer;  }
 .border-top .border-top-right li:last-child{ border-right: none; }
+
+.wrapper .sidebar-inner{ width: 180px; }
+.wrapper .sidebar-inner .sidebar-fold{ width: 180px; background: #4a5064; text-align: center; color: #fff; line-height: 30px;  cursor: pointer;}
