--- a/public/ststic/console/css/css.css
+++ b/public/ststic/console/css/css.css
@@ -6,5 +6,13 @@
 .border-top .border-top-right li a:hover{  background: black; cursor: pointer;  }
 .border-top .border-top-right li:last-child{ border-right: none; }
 
-.wrapper .sidebar-inner{ width: 180px; }
-.wrapper .sidebar-inner .sidebar-fold{ width: 180px; background: #4a5064; text-align: center; color: #fff; line-height: 30px;  cursor: pointer;}
+.wrapper .sidebar-inner{ min-width: 38px; max-width: 180px;  background: #333744;}
+.wrapper .sidebar-inner .sidebar-fold{ width: 100%; background: #4a5064; text-align: center; color: #fff; line-height: 30px;  cursor: pointer;}
+.wrapper .sidebar-inner ul li{ float: left;}
+.wrapper .sidebar-inner ul li span{ padding-right: 10px; }
+.wrapper .sidebar-inner ul li a{ width: 180px; line-height: 40px; height: 40px; padding-left: 15px;  display: block; cursor: pointer; color: #fff; overflow: hidden; }
+.wrapper .sidebar-inner ul li:hover{ background: #3299cc; color: #fff; }
+.wrapper .sidebar-inner ul li:hover dl{ background: #333744; }
+	
+.wrapper .sidebar-inner ul li dl { display: none;  margin:0px; }
+.wrapper .sidebar-inner ul li dl dd a:hover{  background: #4a5064; color: red; }
