--- a/appliaction/console/view/index/index.html
+++ b/appliaction/console/view/index/index.html
@@ -25,10 +25,10 @@
 		</div>
 	</div>
 	<div class="wrapper">
-		<nav class="sidebar-inner">
+		<nav class="sidebar-inner fl">
 			<div class="sidebar-fold" ><span class="glyphicon glyphicon-transfer"></span></div>
 			<ul>
-				<li><a href="javascript:;"><span class="glyphicon glyphicon-triangle-right"></span>云计算机基础服务</a>
+				<li><a href="javascript:;" data-toggle="tooltip" data-placement="right" title="Tooltip on right"><span class="glyphicon glyphicon-triangle-right"></span>云计算机基础服务</a>
 					<dl>
 						<dd><a href="javascript:;"><span class="glyphicon glyphicon-tasks"></span>云服务器ECS</a></dd>
 						<dd><a href="javascript:;"><span class="glyphicon glyphicon-sort"></span>CDN</a></dd>
@@ -66,11 +66,24 @@
 						<dd><a href="javascript:;"><span class="glyphicon glyphicon-sort"></span>CDN</a></dd>
 						<dd><a href="javascript:;"><span class="glyphicon glyphicon-usd"></span>访问控制</a></dd>
 						<dd><a href="javascript:;"><span class="glyphicon glyphicon-phone"></span>云服务器ECS</a></dd>
+					</dl>
+				</li>
+				<li><a href="javascript:;"><span class="glyphicon glyphicon-tasks"></span>访问控制</a></li>
+			</ul>
+		</nav>
+		
+		<div class="product-nav-scene fl">
+			<div class="title">云服务器 ECS</div>
+			<ul>
+				<li><a href="javascript:;">实例</a></li>
+				<li><a href="javascript:;"><span class="glyphicon glyphicon-tasks"></span>存储</a>
+					<dl>
+						<dd><a href="javascript:;">云盘</a></dd>
+						<dd><a href="javascript:;">文件存储</a></dd>
 					</dl>
 				</li>
 			</ul>
-		</nav>
-
+		</div>
 		<div class="content-main" id="content-main">
 			<!-- <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index_v1.html?v=4.1.0" frameborder="0" data-id="index_v1.html" seamless="" style="display: inline;"></iframe> -->
 		</div>
@@ -78,6 +91,7 @@
 <script type="text/javascript" src="{{getConfig('config','ststic')}}/console/js/jquery-1.12.3.min.js"></script>
 <script type="text/javascript" src="{{getConfig('config','vendor')}}/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{getConfig('config','vendor')}}/pace/pace.min.js"></script>
+<script type="text/javascript" src="{{getConfig('config','vendor')}}/layer/layer.js"></script>
 <script type="text/javascript" src="{{getConfig('config','ststic')}}/console/js/common.js"></script>
 </body>
 </html>
