--- a/appliaction/console/view/index/index.html
+++ b/appliaction/console/view/index/index.html
@@ -73,10 +73,16 @@
 		</nav>
 		
 		<div class="product-nav-scene fl">
-			<div class="title">云服务器 ECS</div>
+			<div class="title">设置</div>
 			<ul>
-				<li><a href="javascript:;">实例</a></li>
-				<li><a href="javascript:;"><span class="glyphicon glyphicon-tasks"></span>存储</a>
+				<li><a href="javascript:;"><span></span>配置菜单</a></li>
+				<li><a href="javascript:;"><span class="glyphicon glyphicon-triangle-right"></span>存储</a>
+					<dl>
+						<dd><a href="javascript:;">云盘</a></dd>
+						<dd><a href="javascript:;">文件存储</a></dd>
+					</dl>
+				</li>
+				<li><a href="javascript:;"><span class="glyphicon glyphicon-triangle-right"></span>存储</a>
 					<dl>
 						<dd><a href="javascript:;">云盘</a></dd>
 						<dd><a href="javascript:;">文件存储</a></dd>
@@ -84,8 +90,8 @@
 				</li>
 			</ul>
 		</div>
-		<div class="content-main" id="content-main">
-			<!-- <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index_v1.html?v=4.1.0" frameborder="0" data-id="index_v1.html" seamless="" style="display: inline;"></iframe> -->
+		<div class="content-main fl" >
+			<iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="/setting/menus/index" frameborder="0" data-id="index_v1.html" seamless="" style="display: inline;" sandbox></iframe>
 		</div>
 	</div>
 <script type="text/javascript" src="{{getConfig('config','ststic')}}/console/js/jquery-1.12.3.min.js"></script>
