--- a/console/src/assets/css/css.css
+++ b/console/src/assets/css/css.css
@@ -6,22 +6,22 @@
 .border-top .border-top-right li a:hover{  background: black; cursor: pointer;  }
 .border-top .border-top-right li:last-child{ border-right: none; }
 
-.wrapper .sidebar-inner{ min-width: 38px; max-width: 180px;  background: #333744;}
+.wrapper .sidebar-inner{ min-width: 38px;   background: #333744; padding: 0px;}
 .wrapper .sidebar-inner .sidebar-fold{ width: 100%; background: #4a5064; text-align: center; color: #fff; line-height: 30px;  cursor: pointer;}
-.wrapper .sidebar-inner ul li{ float: left;}
+.wrapper .sidebar-inner ul li{ float: left; display: block; width: 100%;}
 .wrapper .sidebar-inner ul li span{ padding-right: 10px; }
-.wrapper .sidebar-inner ul li a{ width: 180px; line-height: 40px; height: 40px; padding-left: 15px;  display: block; cursor: pointer; color: #fff; overflow: hidden; }
+.wrapper .sidebar-inner ul li a{ line-height: 40px; height: 40px; padding-left: 15px;  display: block; cursor: pointer; color: #fff; overflow: hidden; }
 .wrapper .sidebar-inner ul li:hover{ background: #3299cc; color: #fff; }
 .wrapper .sidebar-inner ul li:hover dl{ background: #333744; }
 	
-.wrapper .sidebar-inner ul li dl { display: none;  margin:0px; }
+.wrapper .sidebar-inner ul li dl { margin:0px; }
 .wrapper .sidebar-inner ul li dl dd a:hover{  background: #4a5064; color: red; }
 .wrapper .sidebar-inner ul li dl dd .cur{ background: #4a5064; }
 
-.wrapper .product-nav-scene{ width: 180px; background: #EAEDF1; }
+.wrapper .product-nav-scene{ background: #EAEDF1; padding: 0px; }
 .wrapper .product-nav-scene .title{ width: 100%; display: block; height: 70px; background: #e1e1e1; line-height: 70px; padding-left: 40px; color: #000; font-weight: bolder; }
-.wrapper .product-nav-scene ul li{ float: left;}
-.wrapper .product-nav-scene ul li a{ width: 180px; line-height: 40px; height: 40px; padding-left: 15px;  display: block; cursor: pointer; color: #333; overflow: hidden; }
+.wrapper .product-nav-scene ul li{ float: left;  display: block; width: 100%;}
+.wrapper .product-nav-scene ul li a{ line-height: 40px; height: 40px; padding-left: 15px;  display: block; cursor: pointer; color: #333; overflow: hidden; }
 .wrapper .product-nav-scene ul li a span{ padding-right: 14px; width: 14px;  }
 .wrapper .product-nav-scene ul li:hover{ background: #fff; }
 .wrapper .product-nav-scene ul li:hover dl{ background: red;}
