--- a/console/src/assets/css/common.css
+++ b/console/src/assets/css/common.css
@@ -2,7 +2,7 @@
 .mt3{margin-top: 3px;}
 .mt10{margin-top: 10px;}
 
-body{font-family: "Helvetica Neue","Luxi Sans","DejaVu Sans",Tahoma,"Hiragino Sans GB",STHeiti,"Microsoft YaHei"; font-size: 12px;}
+body{font-family: "Helvetica Neue","Luxi Sans","DejaVu Sans",Tahoma,"Hiragino Sans GB",STHeiti,"Microsoft YaHei"; }
 .iconfont{font-size: 14px;-webkit-text-stroke-width: 0px; line-height: 14px; }
 .ml10 { margin-left: 15px; }
 .pr10{padding-right: 10px !important;}
