--- a/public/ststic/blog/css/css.css
+++ b/public/ststic/blog/css/css.css
@@ -1,4 +1,4 @@
-body{ background: #ccc; }
+body{ background: #f0f2f7; }
 .wapper{ background: #fff; padding-left: 15px; padding-right: 15px; }
 .top{ border-bottom: 1px #ccc solid; line-height: 35px; }
 .top a{ padding-left: 5px; }
@@ -6,5 +6,25 @@ body{ background: #ccc; }
 .left .news li{ border-bottom: 1px solid #ccc; padding-bottom: 20px; }
 .left .news li span{ line-height: 45px; font-size: 21px; font-weight: bolder;  display: block; }
 .left .news li .news-content img{ width: 150px; height: 100px; float: left; margin-right: 15px; }
-.left .news li .news-content .desc{ min-height: 70px; } 
-.left .news li .news-content dl{ float: left; }
+.left .news li .news-content .desc p{ min-height: 70px; } 
+.left .news li .news-content dl { float: left; padding-right: 10px;  }
+.left .news li .news-content dl i{margin-right: 5px;}
+
+.index-search{ margin-top: 25px; border: 1px solid #e1e1e1; padding: 20px; }
+
+.tags{ margin-top: 25px; }
+.title{ width: 70px; text-align: center;line-height: 30px;  cursor: pointer;}
+.tags .tags-content{ border: 1px solid #e1e1e1;  padding: 20px;}
+.tags .tags-content li{float: left; width: 48%;  line-height: 25px; padding-left: 3%;}
+
+.article{ margin-top: 25px; }
+.title{ width: 70px; text-align: center;line-height: 30px;  cursor: pointer;}
+.article .article-content{ border: 1px solid #e1e1e1;  padding: 20px;}
+.article .article-content li{float: left; width: 100%;  line-height: 25px;}
+
+.footer{background: #363d4c; color: #fff; padding: 20px; margin-top: 25px; line-height: 35px;}
+.footer .link { border-bottom:  1px solid #ccc; }
+.footer .link li{ float: left; padding-right: 10px;   }
+.footer .link .link-title{ font-weight: bolder;}
+.footer .link li a{ color: #fff; }
+.footer .link li a:hover{ color: red; }
