--- a/appliaction/blog/view/index/index.html
+++ b/appliaction/blog/view/index/index.html
@@ -5,7 +5,8 @@
 	<title>个人博客</title>
 	<meta name="keywords" content=""/>
 	<meta name="description" content=""/>
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="{{getConfig('config','vendor')}}/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="{{getConfig('config','vendor')}}/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="{{getConfig('config','vendor')}}/pace/themes/blue/pace-theme-minimal.css" />
 	<link rel="stylesheet" href="{{getConfig('config','ststic')}}/blog/css/common.css" />
@@ -35,7 +36,7 @@
 									<dt>
 										<dl><i class="fa fa-eye"></i> 热度 555</dl>
 										<dl><i class="fa fa-fire"></i> 评论 5</dl>
-										<dl><i class="fa fa-clock-o"></i> 时间 2014-10-10</dl>
+										<dl class="hidden-sm hidden-xs"><i class="fa fa-clock-o"></i> 时间 2014-10-10</dl>
 									</dt>
 								</div>
 							</div>
@@ -52,7 +53,7 @@
 									<dt>
 										<dl><i class="fa fa-eye"></i> 热度 555</dl>
 										<dl><i class="fa fa-fire"></i> 评论 5</dl>
-										<dl><i class="fa fa-clock-o"></i> 时间 2014-10-10</dl>
+										<dl class="hidden-sm hidden-xs"><i class="fa fa-clock-o"></i> 时间 2014-10-10</dl>
 									</dt>
 								</div>
 							</div>
@@ -62,7 +63,7 @@
 				</div>
 
 				<nav aria-label="Page navigation">
-				  <ul class="pagination">
+				  <ul class="pagination hidden-sm hidden-xs">
 				    <li>
 				      <a href="#" aria-label="Previous">
 				        <span aria-hidden="true">&laquo; 上一页</span>
@@ -81,7 +82,6 @@
 				    </li>
 				  </ul>
 				</nav>
-
 			</div>
 			<div class="right col-md-3 hidden-sm hidden-xs">
 				<div class="index-search">
@@ -158,7 +158,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="footer w">
-			<div class="link">
+			<div class="link hidden-sm hidden-xs">
 				<ul>
 					<li class="link-title">友情链接：</li>
 					<li><a href="javascript:;">百度</a></li>
