--- a/public/ststic/blog/css/css.css
+++ b/public/ststic/blog/css/css.css
@@ -3,10 +3,13 @@ body{ background: #f0f2f7; }
 .top{ border-bottom: 1px #ccc solid; line-height: 35px; }
 .top a{ padding-left: 5px; }
 
+.nd-news p{font-size:3rem; color: #e1e1e1; text-align:center;}
+
 .left .news li{ border-bottom: 1px solid #ccc;  }
 .left .news li span{ line-height: 2.5rem; font-size: 2rem; font-weight: bolder;  display: block;  margin-bottom:0.5rem; margin-top: 0.5rem;}
-.left .news li .news-content img{ width: 150px; height: 100px; float: left; margin-right: 15px; }
-.left .news li .news-content .desc p{ min-height: 6rem; line-height: 1.8rem } 
+.left .news li .news-content img{ width:150px; height: 100px; float: left; margin-right: 15px; margin-bottom: 1rem; }
+.left .news li .news-content .desc{ display: inline-block; }
+.left .news li .news-content .desc p{ line-height: 1.85rem;align-items: center; overflow: hidden;} 
 .left .news li .news-content dl { float: left; padding-right: 10px;  }
 .left .news li .news-content dl i{margin-right: 5px;}
 
@@ -20,7 +23,7 @@ body{ background: #f0f2f7; }
 .article{ margin-top: 25px; }
 .title{ width: 70px; text-align: center;line-height: 30px;  cursor: pointer;}
 .article .article-content{ border: 1px solid #e1e1e1;  padding: 20px;}
-.article .article-content li{float: left; width: 100%;  line-height: 25px;}
+.article .article-content li{float: left; width: 100%;  line-height: 25px; white-space:nowrap; overflow:hidden;text-overflow:ellipsis;}
 
 .footer{background: #363d4c; color: #fff; padding: 20px; margin-top: 25px; line-height: 35px;}
 .footer .link { border-bottom:  1px solid #ccc; }
@@ -28,3 +31,8 @@ body{ background: #f0f2f7; }
 .footer .link .link-title{ font-weight: bolder;}
 .footer .link li a{ color: #fff; }
 .footer .link li a:hover{ color: red; }
+
+.pagination-info {color: #888;display: inline-block; padding: 0 16px; vertical-align: middle; float: left; margin-top: 28px;}
+.pagination-goto {display: inline-block; padding: 0 15px; vertical-align: middle;}
+.pagination-goto input.w40{display: inline-block; margin-right: 6px; width: 40px;}
+.pagination-goto .btn {padding: 8px;}
