--- a/appliaction/admin/view/setting/menus/edit.html
+++ b/appliaction/admin/view/setting/menus/edit.html
@@ -93,7 +93,7 @@
 										<input type="text" value="{??$data['url']}" name="url" placeholder="请求地址" class="form-control">
 									</div>
 								</div>
-								<div class="form-group">
+								<div class="form-group radio" data-radio="{??$data['is_show']}">
 									<label class="control-label col-sm-3">是否显示：</label>
 									<div class="radio-inline">
 										<label>
@@ -106,7 +106,7 @@
 										</label>
 									</div>
 								</div>
-								<div class="form-group">
+								<div class="form-group radio" data-radio="{??$data['is_white']}">
 									<label class="control-label col-sm-3">是否白名单：</label>
 									<div class="radio-inline">
 										<label>
@@ -119,7 +119,7 @@
 										</label>
 									</div>
 								</div>
-								<div class="form-group">
+								<div class="form-group radio" data-radio="{??$data['status']}">
 									<label class="control-label col-sm-3">是否有效：</label>
 									<div class="radio-inline">
 										<label>
