--- a/appliaction/admin/view/setting/menus/index.html
+++ b/appliaction/admin/view/setting/menus/index.html
@@ -17,7 +17,7 @@
 							<h5>菜单列表</h5>
 						</div>
 						<div class="pull-right">
-							<a class="btn btn-primary btn-open" data-href="{F:url('edit')}" data-id="" data-height="750px">添加菜单</a>
+							<a class="btn btn-primary btn-open" data-href="{F:url('edit')}"  data-height="750px">添加菜单</a>
 						</div>
 					</div>
 					<div class="console-form">
@@ -70,7 +70,6 @@
 	</div>
 	{include /public/global_js}
 	<script type="text/javascript">
-	function 
 	</script>
 </body>
 </html>
