--- a/appliaction/admin/view/setting/admin/index.html
+++ b/appliaction/admin/view/setting/admin/index.html
@@ -1,4 +1,13 @@
-<template>
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=8">
+	<meta name="keywords" content=""/>
+	<title>后台管理</title>
+	{include /public/global_css}
+</head>
+  	<body>
 	<div id="console-admin-index">
 		<div class="view-content-container" >
 			<div class="row">
@@ -8,7 +17,7 @@
 							<h5>管理员列表</h5>
 						</div>
 						<div class="pull-right">
-							<a class="btn btn-primary" @click="open($event)" data-id="" data-height="750">添加管理员</a>
+							<a class="btn btn-primary btn-open"  data-href="{F:url('edit')}"  data-height="600px" data-width="356px">添加管理员</a>
 						</div>
 					</div>
 					<div class="console-form">
@@ -29,24 +38,29 @@
 										</tr>
 									</thead>
 									<tbody>
+										{loop $list $key $value}
 									 	<tr v-for="list in data.list">
-											<td>{{list.id}}</td>
-											<td>{{list.username}}</td>
-											<td>{{list.nickname}}</td>
-											<td>{{list.group}}</td>
-											<td>{{list.mobile}}</td>
-											<td>{{list.created * 1000 | date('YMD')}}</td>
-											<td>{{list.login_time * 1000 | date('YMD')}}</td>
+											<td>{$value['id']}</td>
+											<td>{$value['username']}</td>
+											<td>{$value['nickname']}</td>
+											<td>{$value['group']}</td>
+											<td>{$value['mobile']}</td>
+											<td>{F:date('Y-m-d H:i',$value['created'])}</td>
+											<td>{F:date('Y-m-d H:i',$value['login_time'])}</td>
 											<td>
-												<p style="color:green" v-if="list.status">{{other.statusCopy[list.status]}}</p>
-												<p style="color:red" v-else>{{other.statusCopy[list.status]}}</p>
+												{if $value['status']}
+													<p style="color:green">{$statusCopy[$value['status']]}</p>
+												{else}
+													<p style="color:red">{$statusCopy[$value['status']]}</p>
+												{/if}
 											</td>
 											<td align='center'>
-												<a @click="open($event)" data-title="编辑菜单" v-bind:data-id="list.id"  data-height="800">编辑</a>
+												<a data-title="编辑管理员" class="btn-open"  data-href="{F:url('edit',array('id'=>$value['id']))}"  data-height="600px" data-width="356px">编辑</a>
 												<span class="text-explode">|</span>
 												<a @click="del(list.id)">删除</a>
 											</td>
 										</tr>
+										{/loop}
 									</tbody>
 								</table>
 							</form>
@@ -56,4 +70,8 @@
 			</div>
 		</div>
 	</div>
-</template>
+	{include /public/global_js}
+	<script type="text/javascript">
+	</script>
+</body>
+</html>
