admin后台增加多图上传功能

--- a/appliaction/admin/view/content/blog/edit.html
+++ b/appliaction/admin/view/content/blog/edit.html
@@ -11,7 +11,7 @@
 	<div id="console-content-edit">
 		<div class="modal-content">
 			<div class="panel-body">
-				<form class="form-horizontal" role="form">
+				<form class="form-horizontal" role="form" action="">
 					<fieldset>
 						<div class="form-group">
 							<label class="control-label col-sm-3">
@@ -28,7 +28,7 @@
 								<span>缩略图</span>
 							</label>
 							<div class="col-sm-8">
-								<up-img  value="{??$data['thumb']}" name="thumb" :max-num="1" :path="'blog'"></up-img>
+								<a class="btn btn-primary btn-ablum" data-name="thumb" data-path="blog" data-max="2">添加图片</a>
 							</div>
 						</div>
 						<div class="form-group">
@@ -50,7 +50,7 @@
 								<span for="myDate">发布时间</span>
 							</label>
 							<div class="col-sm-8">
-								<my-datepicker field="myDate"	placeholder="选择日期" value="{??$data['thumb']}" name="created" format="yyyy/mm/dd" :backward="false" :no-today="false" :forward="false"></my-datepicker>
+								<input type="text" value="{??$data['created']}" name="created" id="created"  class="form-control data-time">	
 							</div>
 						</div>
 						<div class="form-group">
@@ -68,17 +68,9 @@
 								<span>内容</span>
 							</label>
 							<div class="col-sm-8">
-							 	<script id="container" name="content" type="text/plain">
+							 	<script id="container" name="content" type="text/plain" class="ue-editor">
 							 	{??$data['content']}
 							 	</script>
-							 	<!-- 配置文件 -->
-							    <script type="text/javascript" src="/vendor/ueditor/ueditor.config.js"></script>
-							    <!-- 编辑器源码文件 -->
-							    <script type="text/javascript" src="/vendor/ueditor/ueditor.all.js"></script>
-							    <!-- 实例化编辑器 -->
-							    <script type="text/javascript">
-							        var ue = UE.getEditor('container');
-							    </script>
 							</div>
 						</div>
 						<div class="form-group radio" data-radio="{??$data['is_recommend']}">
@@ -111,13 +103,11 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				<a type="submit" class="btn btn-primary" @click="comply">确定</a>
-				<button type="button" class="btn btn-default" id="btn-close"@click="btnClose">取消</button>
+				<a type="submit" class="btn btn-primary btn-comply">确定</a>
+				<button type="button" class="btn btn-default" id="btn-close" >取消</button>
 			</div>
 		</div>
 	</div>
 	{include /public/global_js}
-	<script type="text/javascript">
-	</script>
 </body>
 </html>
