--- a/appliaction/admin/view/content/blog/edit.html
+++ b/appliaction/admin/view/content/blog/edit.html
@@ -28,7 +28,7 @@
 								<span>缩略图</span>
 							</label>
 							<div class="col-sm-8">
-								<a class="btn btn-primary btn-ablum" data-name="thumb" data-path="blog" data-max="2">添加图片</a>
+								<a class="btn btn-primary btn-ablum" data-name="thumb" data-value='{??$data['thumb']}' data-path="blog" data-max="1">添加图片</a>
 							</div>
 						</div>
 						<div class="form-group">
