--- a/appliaction/admin/view/content/category/edit.html
+++ b/appliaction/admin/view/content/category/edit.html
@@ -34,7 +34,16 @@
 								<span>分类名称</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['name']}" name="name" placeholder="菜单名称" class="form-control">	
+								<input type="text" value="{??$data['name']}" name="name" placeholder="分类名称" class="form-control">	
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>缩略图</span>
+							</label>
+							<div class="col-sm-8">
+								<a class="btn btn-primary btn-ablum" data-name="thumb" data-value='{??$data['thumb']}' data-path="category" data-max="1">添加图片</a>
 							</div>
 						</div>
 
@@ -44,11 +53,11 @@
 								<span>排序</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['sort']}" name="sort" placeholder="菜单名称" class="form-control">	
+								<input type="text" value="{??$data['sort']}" name="sort" placeholder="排序" class="form-control">	
 							</div>
 						</div>
 						
-						<div class="form-group radio"  radio-data="{??$data['is_show']}">
+						<div class="form-group radio"  data-radio="{??$data['is_show']}">
 							<label class="control-label col-sm-3">是否显示：</label>
 							<div class="radio-inline">
 								<label>
