admin后台增加退出操作

--- a/appliaction/admin/view/index/index/index.html
+++ b/appliaction/admin/view/index/index/index.html
@@ -16,8 +16,8 @@
 			</div>
 			<div class="border-top-right fr">
 				<ul>
-					<li><a href="javascript:;">{data.nickname}</a></li>
-					<li><a href="javascript:;" @click="outLogin()">退出</a></li>
+					<li><a href="javascript:;">{$this->consoleName}</a></li>
+					<li><a href="{F:url('login/login_out')}">退出</a></li>
 				</ul>
 			</div>
 		</div>
