--- a/public/ststic/admin/css/common.css
+++ b/public/ststic/admin/css/common.css
@@ -8,6 +8,7 @@ body{font-family: "Helvetica Neue","Luxi Sans","DejaVu Sans",Tahoma,"Hiragino Sa
 .pr10{padding-right: 10px !important;}
 .pl10{padding-left: 10px !important;}
 .lh32{line-height: 32px;}
+a{ cursor: pointer; }
 a:hover{ text-decoration: none; }
 a:link{ text-decoration: none; }
 
