--- a/appliaction/blog/view/index/index/detail.html
+++ b/appliaction/blog/view/index/index/detail.html
@@ -37,6 +37,77 @@
 						{$data['content']}
 					</div>
 				</div>
+				<div class="clearfix"></div>
+				<div class="comment">
+					<ul>
+						<li>
+							<label>xxxx</label>
+							<p>谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好</p>
+							<div class="buttom">
+								<div class="pull-left">
+									<i class="fa fa-clock-o"></i> 时间 {F:date('Y-m-d',$data['created'])}
+								</div>
+								<div class="pull-right">
+									<a href="javascript:;">举报</a>
+									<a href="javascript:;">回复[0]</a>
+								</div>
+							</div>
+							<div class="clearfix"></div>
+						</li>
+						<li>
+							<label>xxxx</label>
+							<p>谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好</p>
+							<div class="buttom">
+								<div class="pull-left">
+									<i class="fa fa-clock-o"></i> 时间 {F:date('Y-m-d',$data['created'])}
+								</div>
+								<div class="pull-right">
+									<a href="javascript:;">举报</a>
+									<a href="javascript:;">回复[0]</a>
+								</div>
+							</div>
+							<div class="clearfix"></div>
+							<div class="comment-chlid">
+								<ul>
+									<li>
+										<label>xxxx</label>
+										<p>谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好谢教授平时很忙吧？再忙也要看书学习哈，写文章还是需要点证据和论点的，逻辑混乱了不好</p>
+										<div class="buttom">
+											<div class="pull-left">
+												<i class="fa fa-clock-o"></i> 时间 {F:date('Y-m-d',$data['created'])}
+											</div>
+											<div class="pull-right">
+												<a href="javascript:;">举报</a>
+											</div>
+										</div>
+										<div class="clearfix"></div>
+									</li>
+								</ul>
+				
+
+		       				 	<form method="post"  class="form-horizontal">
+		       				 		<div class="form-group">
+									    <label for="inputEmail3" class="col-sm-2 control-label">称呼</label>
+									    <div class="col-sm-10">
+									      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+									    </div>
+								  	</div>
+		       				 		<div class="form-group">
+									    <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
+									    <div class="col-sm-10">
+									      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+									    </div>
+								  	</div>
+					               
+									<p><textarea name="comment" id="comment" rows="10" tabindex="4"></textarea></p>
+    						 	</form>
+
+	
+							</div>
+							<div class="clearfix"></div>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="right col-md-3 hidden-sm hidden-xs">
 				{include /public/right}
