--- a/appliaction/blog/view/public/right.html
+++ b/appliaction/blog/view/public/right.html
@@ -11,6 +11,7 @@
 					<div class="title btn737">分类目录</div>
 					<div class="tags-content">
 						<ul>
+							<li><a href="/">全部</a></li>
 							{loop $listClass $key $value}
 							<li><a href="{F:url('index',array('tag'=>$value['tag']))}">{$tagCopy[$value['tag']]} ({$value['num']})</a></li>
 							{/loop}
