--- a/public/ststic/blog/css/css.css
+++ b/public/ststic/blog/css/css.css
@@ -27,6 +27,11 @@ body{ background: #f0f2f7; }
 .article .article-content{ border: 1px solid #e1e1e1;  padding: 20px;}
 .article .article-content li{float: left; width: 100%;  line-height: 25px; white-space:nowrap; overflow:hidden;text-overflow:ellipsis;}
 
+.comment{ margin-top: 2rem; }
+.comment li{ border-bottom: 1px solid #e1e1e1; padding:1rem 0; }
+
+.comment-chlid{ border: 1px solid #e1e1e1; margin:2rem; padding:1rem; }
+
 .footer{background: #363d4c; color: #fff; padding: 20px;  line-height: 35px;}
 .footer .link { border-bottom:  1px solid #ccc; }
 .footer .link li{ float: left; padding-right: 10px;   }
