--- a/appliaction/admin/view/index/index/index.html
+++ b/appliaction/admin/view/index/index/index.html
@@ -87,6 +87,35 @@
 			$('.product-nav-scene').find('.title').text(name);
 			$('.product-nav-scene').css('display','block');
 			$('.product-nav-scene').find('ul').html(result);
+
+			//导航展开下级菜单
+    		$('.product-nav-scene ul li').click(function() {
+		        //初始化
+		        $('.product-nav-scene ul li dl').css('display', 'none');
+		        $('.product-nav-scene ul li').each(function() {
+		            if ($(this).children().children().eq(0).attr('class') == 'glyphicon glyphicon-triangle-bottom') {
+		                $(this).children().children().eq(0).attr('class', 'glyphicon glyphicon-triangle-right');
+		            }
+		        });
+
+		        //展开/收缩
+		        var ico = $(this).children().children(':first').attr('class');
+		        if (ico == 'glyphicon glyphicon-triangle-right') {
+		            $(this).children().children(':first').attr('class', 'glyphicon glyphicon-triangle-bottom');
+		            $(this).find('dl').css('display', 'block');
+		        } else if (ico == 'glyphicon glyphicon-triangle-bottom') {
+		            $(this).children().children(':first').attr('class', 'glyphicon glyphicon-triangle-right');
+		            $(this).find('dl').css('display', 'none');
+		        }
+		    })
+
+	     	//二级高亮
+		    $('.product-nav-scene dd').click(function() {
+		        $('.product-nav-scene dd').each(function() {
+		            $(this).find('a').removeClass();
+		        })
+		        $(this).find('a').addClass('cur');
+		    });
 		},"html");
 	})
 	</script>
