--- a/public/ststic/admin/css/css.css
+++ b/public/ststic/admin/css/css.css
@@ -26,7 +26,7 @@
 .wrapper .product-nav-scene ul li:hover{ background: #fff; }
 .wrapper .product-nav-scene ul li:hover dl{ background: red;}
 
-.wrapper .product-nav-scene ul li dl{ margin:0px; display: block; width: 100%;}
+.wrapper .product-nav-scene ul li dl{ margin:0px; display: none; width: 100%;}
 .wrapper .product-nav-scene ul li dl dd a{ padding-left: 20px; }
 .wrapper .product-nav-scene ul li:hover dl{ background: none; }
 .wrapper .product-nav-scene ul li dl dd a:hover{  background: #ccc; color: red; }
