--- a/appliaction/blog/view/index/index/index.html
+++ b/appliaction/blog/view/index/index/index.html
@@ -41,7 +41,7 @@
 								<div class="desc pull-left">
 									<p >{$value['description']}</p>
 									<dt>
-										<dl><i class="fa fa-eye"></i> 热度 555</dl>
+										<dl><i class="fa fa-eye"></i> 热度 {$value['hot']}</dl>
 										<dl><i class="fa fa-fire"></i> 评论 5</dl>
 										<dl class="hidden-sm hidden-xs"><i class="fa fa-clock-o"></i> 时间 {F:date('Y-m-d',$value['created'])}</dl>
 									</dt>
