--- a/appliaction/blog/view/index/index/index.html
+++ b/appliaction/blog/view/index/index/index.html
@@ -2,15 +2,25 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>个人博客</title>
-	<meta name="keywords" content=""/>
-	<meta name="description" content=""/>
+	<title>四月 - 个人博客 | 程序员的工作记录点</title>
+	<meta name="keywords" content="四月工作室 四月 个人博客 PHP程序 Denha框架"/>
+	<meta name="description" content="时间没有记录,文字记录时间！四月的个人博客，这里是我的工作记录"/>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
+	<meta name="baidu-site-verification" content="IOphv8ZngJ" />
 	<link rel="stylesheet" href="{F:getConfig('config','vendor')}/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="{F:getConfig('config','vendor')}/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="{F:getConfig('config','vendor')}/pace/themes/blue/pace-theme-minimal.css" />
 	<link rel="stylesheet" href="{F:getConfig('config','ststic')}/blog/css/common.css" />
 	<link rel="stylesheet" href="{F:getConfig('config','ststic')}/blog/css/css.css" />
+	<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?eb42f04c15f2dc6876fc2c14439fc6ef";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	</script>
 </head>
 <body>
 	<div class="wapper w14">
