框架优化 后台模块增加

--- a/appliaction/admin/view/setting/menus/edit.html
+++ b/appliaction/admin/view/setting/menus/edit.html
@@ -11,10 +11,10 @@
 	<div id="console-setting-menus-edit">
 		<div class="modal-content">
 			<div class="modal-body clearfix">
-				<div class="panel">
-					<div class="panel-body">
-						<form class="form-horizontal" role="form" action="">
-							<input type="hidden" value="{??$data['id']}" name="id">	
+				<form class="form-horizontal" action="">
+					<input type="hidden" value="{??$data['id']}" name="id">	
+					<div class="panel">
+						<div class="panel-body">
 							<fieldset>
 								<div class="form-group">
 									<label class="control-label col-sm-3">
@@ -133,19 +133,18 @@
 									</div>
 								</div>
 							</fieldset>
-						</form>
+						</div>
 					</div>
-				</div>
-			</div>
-			<div class="modal-footer">
-				<button type="submit" class="btn btn-primary btn-comply" click="comply">确定</button>
-				<button type="button" class="btn btn-default" id="btn-close">取消</button>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary btn-comply">确定</button>
+						<button type="button" class="btn btn-default" id="btn-close">取消</button>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
 	{include /public/global_js}
 	<script type="text/javascript">
-
 	</script>
 </body>
 </html>
