--- a/public/ststic/blog/css/css.css
+++ b/public/ststic/blog/css/css.css
@@ -15,6 +15,8 @@ body{ background: #f0f2f7; }
 .desc dl i{margin-right: 5px;}
 
 .news-content h2{font-weight: 600;}
+
+.news-content .content img{ max-width: 90%; text-align: center; }
 .news-content .content p{ font-size: 1.4rem; }
 .news-content .content .origin{margin-top: 3rem; color: #ccc;}
 .news-content .content .origin a{color: #ccc;}
