--- a/appliaction/admin/view/content/menus/edit.html
+++ b/appliaction/admin/view/content/menus/edit.html
@@ -68,7 +68,6 @@
 									<div class="col-sm-8">
 										<input type="text" value="{??$data['name']}" name="name" placeholder="菜单名称" class="form-control">	
 									</div>
-									
 								</div>
 								<div class="form-group add1">
 									<label class="control-label col-sm-3">
@@ -86,6 +85,33 @@
 									</label>
 									<div class="col-sm-8">
 										<textarea class="form-control" rows="3" name="description">{??$data['description']}</textarea>
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="control-label col-sm-3">
+										<span class="text-danger">*</span>
+										<span>模块名称</span>
+									</label>
+									<div class="col-sm-8">
+										<input type="text" value="{??$data['module']}" name="module" placeholder="控制器名称" class="form-control">
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="control-label col-sm-3">
+										<span class="text-danger">*</span>
+										<span>控制器名称</span>
+									</label>
+									<div class="col-sm-8">
+										<input type="text" value="{??$data['controller']}" name="controller" placeholder="控制器名称" class="form-control">
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="control-label col-sm-3">
+										<span class="text-danger">*</span>
+										<span>方法名称</span>
+									</label>
+									<div class="col-sm-8">
+										<input type="text" value="{??$data['action']}" name="action" placeholder="方法名称" class="form-control">
 									</div>
 								</div>
 								<div class="form-group">
