--- a/public/ststic/blog/css/css.css
+++ b/public/ststic/blog/css/css.css
@@ -40,6 +40,8 @@ body{ background: #f0f2f7; }
 .article .article-content{ border: 1px solid #e1e1e1;  padding: 20px;}
 .article .article-content li{float: left; width: 100%;  line-height: 25px; white-space:nowrap; overflow:hidden;text-overflow:ellipsis;}
 
+.bars{ margin-top: 0.2rem; }
+
 .comment{ margin-top: 2rem; }
 .comment li{ border-bottom: 1px solid #e1e1e1; padding:1rem 0; }
 
