--- a/appliaction/admin/view/content/article_edit/edit_1.html
+++ b/appliaction/admin/view/content/article_edit/edit_1.html
@@ -61,7 +61,7 @@
 								<span for="myDate">发布时间</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['created']}" name="created" id="created"  class="form-control data-time">	
+								<input type="text" value="{??$data['created']}" name="created"  class="form-control data-time">	
 							</div>
 						</div>
 						<div class="form-group">
