--- a/appliaction/admin/view/content/car/edit.html
+++ b/appliaction/admin/view/content/car/edit.html
@@ -16,37 +16,19 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
-								<span>店铺名称</span>
+								<span>标题</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['name']}" name="name" placeholder="标题"  disabled class="form-control">	
+								<input type="text" value="{??$data['title']}" name="name" placeholder="标题"  disabled class="form-control">	
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
-								<span>店铺头图</span>
+								<span>Banner图片</span>
 							</label>
 							<div class="col-sm-8">
-								<img src="{$data['avatar']}" width="150" height="100" style="margin-left: 10px;">
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="control-label col-sm-3">
-								<span class="text-danger"></span>
-								<span for="myDate">店铺评分</span>
-							</label>
-							<div class="col-sm-8">
-								<input type="text" value="{??$data['credit_level']['value']}"  disabled class="form-control">	
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="control-label col-sm-3">
-								<span class="text-danger"></span>
-								<span for="myDate">店铺照片</span>
-							</label>
-							<div class="col-sm-8">
-								{loop $data['ablum'] $key $value}
+								{loop $data['banner'] $key $value}
 									<img src="{$value}" width="150" height="100" style="margin-left: 10px;">
 								{/loop}
 							</div>
@@ -54,49 +36,86 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
-								<span for="myDate">店铺认证信息</span>
+								<span>里程数[万公里]</span>
 							</label>
 							<div class="col-sm-8">
-								{loop $data['ide_ablum'] $key $value}
-									<img src="{$value}" width="150" height="100" style="margin-left: 10px;">
-								{/loop}
+								<input type="text" value="{??$data['mileage']}" name="mileage" placeholder="里程数"  disabled class="form-control">	
 							</div>
 						</div>
-						<div class="form-group radio" data-radio="{??$data['is_ide']}">
-							<label class="control-label col-sm-3">认证状态：</label>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
+								<span>价格</span>
+							</label>
+							<div class="col-sm-8">
+								<input type="text" value="{??$data['price']}" name="price" placeholder="价格"  disabled class="form-control">	
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
+								<span>城市</span>
+							</label>
+							<div class="col-sm-8">
+								<select name="city" class="form-control w160" data-selected="{??$data['city']}" disabled>
+									{loop $other['cityCopy'] $key $value}
+									<option value="{$key}" >{$value}</option>
+									{/loop}
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
+								<span>详情内容</span>
+							</label>
+							<div class="col-sm-8">
+								{??$data['content']}	
+							</div>
+						</div>
+						<div class="form-group radio" data-radio="{??$data['is_urgency']}">
+							<label class="control-label col-sm-3">急售</label>
 							<div class="radio-inline">
 								<label>
-									<input type="radio"  name="is_ide"  value="0"> 未认证 
+									<input type="radio" name="is_urgency"  value="1"> 是
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label >
-									<input type="radio" name="is_ide"  value="1"> 已认证
+									<input type="radio" name="is_urgency"  value="0"> 否
+								</label>
+							</div>
+						</div>
+						<div class="form-group radio" data-radio="{??$data['is_recommend']}">
+							<label class="control-label col-sm-3">平台推荐</label>
+							<div class="radio-inline">
+								<label>
+									<input type="radio" name="is_recommend"  value="1"> 推荐
 								</label>
 							</div>
 							<div class="radio-inline">
-								<label>
-									<input type="radio"  name="is_ide"  value="2"> 认证未通过
+								<label >
+									<input type="radio" name="is_recommend"  value="0"> 未推荐
 								</label>
 							</div>
 						</div>
 						<div class="form-group radio" data-radio="{??$data['status']}">
-							<label class="control-label col-sm-3">店铺状态</label>
+							<label class="control-label col-sm-3">商品状态</label>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="status"  value="1"> 开启
+									<input type="radio" name="status"  value="1"> 上架
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label >
-									<input type="radio" name="status"  value="2"> 关闭
+									<input type="radio" name="status"  value="2"> 下架
 								</label>
 							</div>
 						</div>
 					</fieldset>
 				</div>
 				<div class="modal-footer">
-					<a type="submit" class="btn btn-primary btn-comply">确定</a>
+					<button type="button" class="btn btn-primary btn-comply">确定</button>
 					<button type="button" class="btn btn-default" id="btn-close" >取消</button>
 				</div>
 			</form>	
