--- a/appliaction/admin/view/content/integral_rul/lists.html
+++ b/appliaction/admin/view/content/integral_rul/lists.html
@@ -14,7 +14,10 @@
 				<div class="col-sm-12">
 					<div class="console-title console-title-border clearfix">
 						<div class="pull-left">
-							<h5>会员列表</h5>
+							<h5>积分赠送规则</h5>
+						</div>
+						<div class="pull-right">
+							<a class="btn btn-primary btn-open" data-href="{F:url('edit')}" data-height="500px" data-width="356px">添加规则</a>
 						</div>
 					</div>
 					<form class="form-inline ng-pristine ng-valid" action=""  method="get">
