--- a/appliaction/admin/view/content/menus/edit.html
+++ b/appliaction/admin/view/content/menus/edit.html
@@ -71,7 +71,7 @@
 									<div class="col-sm-5">
 										<textarea class="form-control" rows="5" name="content">{??$data['name']}</textarea>
 									</div>
-									<label class="clo-sm-2">如：<br/>菜单名称|别名<br/>关于我们|about us<br/>竖线以及后面的英文名可留空</label>
+									<label class="clo-sm-2">如：<br/>菜单名称|别名<br/>关于我们|about us<br/>竖线以及后面的名称可留空</label>
 								</div>
 								<div class="form-group add1">
 									<label class="control-label col-sm-3">
