--- a/appliaction/admin/view/content/user/lists.html
+++ b/appliaction/admin/view/content/user/lists.html
@@ -49,14 +49,14 @@
 											<td>{$value['mobile']}</td>
 											<td>{F:date('Y-m-d',$value['created'])}</td>
 											<td>
-												{if $value['status']}
+												{if $value['status'] == 1}
 													<a href="javascript:;" style="color: green">启用</a>
-												{else}
+												{elseif $value['status'] == 2}
 													<a href="javascript:;" style="color: red">禁用</a>
 												{/if}
 											</td>
 											<td align='center'>
-												<a data-href="{F:url('edit',array('parentid'=>$value['id']))}"  data-height="500px" data-width="356px"  data-title="用户详情"  class="btn-open">详情</a>
+												<a data-href="{F:url('edit',array('id'=>$value['id']))}"  data-height="500px" data-width="356px"  data-title="用户详情"  data-tooltip="{$value['username']}" class="btn-open">详情</a>
 											</td>
 										</tr>
 										{/loop}
