--- a/appliaction/admin/view/setting/menus/index.html
+++ b/appliaction/admin/view/setting/menus/index.html
@@ -45,18 +45,23 @@
 										 	<tr>
 										 		<td align="center"><input type="text" class="form-control" value="{$value['sort']}" name="id[{$value['id']}]" data-checked='{F:json_encode($checkValue)}'></td>
 												<td>{$value['id']}</td>
-												<td><span>{$value['delimiter']}</span>{$value['name']}</td>
+												<td>
+													<span>{$value['delimiter']}</span>{$value['name']}
+													{if !$value['is_show']}
+														<span style="color: red">[隐]</span>
+													{/if}
+												</td>
 												<td>{$value['module']}</td>
 												<td>{$value['controller']}</td>
 												<td>{$value['action']}</td>
 												<td>{$value['parameter']}</td>
 												<td align='center'>{$value['sort']}</td>
 												<td align='center'>{$value['status']}</td>
-												<td align='center'>{$value['is_show']}</td>
+												<td align='center'>{$value['is_show_copy']}</td>
 												<td align='center'>
 													<a class="btn-open" data-href="{F:url('edit',array('parentid'=>$value['id']))}" data-title="编辑菜单" data-height="800px" data-parentId="list.id">添加子菜单</a>
 													<span class="text-explode">|</span>
-													<a class="btn-open" data-href="{F:url('edit',array('id'=>$value['id']))}" data-title="编辑菜单" data-id="list.id"  data-height="800px">编辑</a>
+													<a class="btn-open" data-href="{F:url('edit',array('id'=>$value['id']))}" data-title="编辑菜单" data-id="list.id" data-tooltip="{$value['name']}"  data-height="800px">编辑</a>
 													<span class="text-explode">|</span>
 													<a onclick="del(list.id)">删除</a>
 												</td>
