增加文件上传插件 增加上传进度显示

--- a/appliaction/admin/view/index/index/index.html
+++ b/appliaction/admin/view/index/index/index.html
@@ -11,7 +11,7 @@
   		<div class="border-top">
 			<div class="border-top-left fl">
 				<ul>
-					<li><a class="logo">Denha</a></li>
+					<li><a class="logo">{F:getVar('web_name','admin.sys')}</a></li>
 				</ul>
 			</div>
 			<div class="border-top-right fr">
